actual end monday

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         </div>
                         <p>
                             
-                        <div class="pull-left">
+                        <div class="pull-left" style="margin:10px">
                             <img src="assets/profileplaceholder.jpg" class="img-responsive img-rounded" style="width:360px">
                         </div>
-                        <div class="pull-left">
+                        <div style="padding:10px">
                             <p>My name is Andrew Finkernagel. From 2006 until 2018, I was self-employed as a professional poker player. As my life circumstances changed, I realized that the time was right for me to embark on a new career. I was attracted to the technology and development field, since it would offer me another career that offered me the opportunity to grow and improve through experience. Poker was a harsh meritocracy, where better performance yielded better results in the long run. The lessons I learned from my poker career will prepare me greatly to be successful as a web developer.
                             <br><br>I currently am attending the Rutgers Coding Boot Camp, where we are set to learn full-stack web development. Graduation: May 2019!</p>
                         </div>
