--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div class="jumbotron">
+                    <div class="jumbotron" id="bodytron">
                         <div class="page-header text-primary">
                             <h2>About Me</h2>
                         </div>
                         <p>
                             
-                        <div class="pull-left" style="margin:10px">
+                        <div class="pull-left" style="margin:20px">
                             <img src="assets/profileplaceholder.jpg" class="img-responsive img-rounded" style="width:360px">
                         </div>
                         <div style="padding:10px">
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </div>
+        <br><br><br><br><br>
         </div>
     </body>
 </html>
