--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                         </div>
                         
                         <ul class="nav navbar-nav navbar-right list-inline center-block" style="margin-top:40px">
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="index.html"><h3>About</h3></a></li>
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="porftolio.html"><h3>Portfolio</h3></a></li>
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="contact.html"><h3>Contact</h3></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="index.html"><h4>About</h4></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="porftolio.html"><h4>Portfolio</h4></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="contact.html"><h4>Contact</h4></a></li>
                         </ul>
                         
                     </div>
@@ -51,5 +51,13 @@
         </div>
         <br><br><br><br><br>
         </div>
+
+        <footer>
+            <div class="navbar navbar-default navbar-fixed-bottom" style="background:grey">
+                <div class="container-fluid" id="footer">
+                    Copyright &copy;
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
