--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                         
                         <ul class="nav navbar-nav navbar-right list-inline center-block" style="margin-top:40px">
                             <li class="nav-item list-inline-item"><a class="nav-link" href="index.html"><h4>About</h4></a></li>
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="porftolio.html"><h4>Portfolio</h4></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="portfolio.html"><h4>Portfolio</h4></a></li>
                             <li class="nav-item list-inline-item"><a class="nav-link" href="contact.html"><h4>Contact</h4></a></li>
                         </ul>
                         
@@ -44,10 +44,12 @@
                                     <label for="message">Message</label>
                                     <textarea type="text" class="form-control" rows="10"></textarea>
                                 </div>
+                                <button type="button" class="btn btn-info btn-lg">Submit</button>
                             </div>
                         </div>
                         <div class="col-md-3"></div>
                 </div>
+        </div>
         </div>
 
                 <footer>
