--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <nav class="navbar navbar-light" style="background-color: #cccccc">
-            <div class="container-fluid">                
+            <div class="container-fluid">
+                <div class="row">                
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
                         <div class="navbar-header jumbotron">       
@@ -17,15 +18,17 @@
                         
                         <ul class="nav navbar-nav navbar-right list-inline center-block" style="margin-top:40px">
                             <li class="nav-item list-inline-item"><a class="nav-link" href="index.html"><h4>About</h4></a></li>
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="porftolio.html"><h4>Portfolio</h4></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="portfolio.html"><h4>Portfolio</h4></a></li>
                             <li class="nav-item list-inline-item"><a class="nav-link" href="contact.html"><h4>Contact</h4></a></li>
                         </ul>
                         
                     </div>
                     <div class="col-md-3"></div>
+                </div>
             </div>
         </nav>
         <div id="bodybackground">
+            <div class="page">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3"></div>
@@ -51,13 +54,14 @@
         </div>
         <br><br><br><br><br>
         </div>
+        </div>
 
         <footer>
-            <div class="navbar navbar-default navbar-fixed-bottom" style="background:grey">
-                <div class="container-fluid" id="footer">
-                    Copyright &copy;
+                <div class="navbar navbar-default navbar-fixed-bottom" style="background:grey">
+                    <div class="container-fluid" id="footer">
+                        Copyright &copy;
+                    </div>
                 </div>
-            </div>
-        </footer>
-    </body>
+            </footer>
+        </body>
 </html>
