--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                         
                         <ul class="nav navbar-nav navbar-right list-inline center-block" style="margin-top:40px">
                             <li class="nav-item list-inline-item"><a class="nav-link" href="index.html"><h4>About</h4></a></li>
-                            <li class="nav-item list-inline-item"><a class="nav-link" href="porftolio.html"><h4>Portfolio</h4></a></li>
+                            <li class="nav-item list-inline-item"><a class="nav-link" href="portfolio.html"><h4>Portfolio</h4></a></li>
                             <li class="nav-item list-inline-item"><a class="nav-link" href="contact.html"><h4>Contact</h4></a></li>
                         </ul>
                         
@@ -27,7 +27,79 @@
         </nav>
         <div id="bodybackground">
         <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6">
+                        <div class="jumbotron" id="bodytron">
+                            <div class="page-header text-primary">
+                                <h2>Portfolio</h2>
+                            </div>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="thumbnail">
+                                        <a href="hangman.html">
+                                            <img src="assets/hangman.jpg" class="img-responsive">
+                                                <div class="caption">
+                                                    <span class="spantext"><p style="text-align:center">Hangman</p></span>
+                                                </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="thumbnail">
+                                        <a href="rpggame.html">
+                                            <img src="assets/rpggame.jpg" class="img-responsive">
+                                                <div class="caption">
+                                                    <span class="spantext"><p style="text-align:center">RPG Game</p></span>
+                                                </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
 
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="thumbnail">
+                                        <a href="triviagame.html">
+                                            <img src="assets/triviagame.jpg" class="img-responsive">
+                                                <div class="caption">
+                                                    <span class="spantext"><p style="text-align:center">Trivia Game</p></span>
+                                                </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                    <div class="col-md-6">
+                                        <div class="thumbnail">
+                                            <a href="infowidget.html">
+                                                <img src="assets/infowidget.jpg" class="img-responsive">
+                                                    <div class="caption">
+                                                        <span class="spantext"><p style="text-align:center">Rutgers Info Widget</p></span>
+                                                    </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="thumbnail">
+                                        <a href="rps.html">
+                                            <img src="assets/rps.jpg" class="img-responsive">
+                                                <div class="caption">
+                                                    <span class="spantext"><p style="text-align:center">Rock Paper Scissors</p></span>
+                                                </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
         </div>
 
         <footer>
